A lot of typeahead progress. Rewrote a large part of the code. Accessibility works roughly, mouse over works pretty well.

--- a/src/app/series-detail/series-detail.component.html
+++ b/src/app/series-detail/series-detail.component.html
@@ -72,7 +72,11 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="collections">Collections</label>
-                            <app-typeahead [settings]="settings"></app-typeahead>
+                            <app-typeahead [settings]="settings">
+                                <ng-template #optionItem let-item let-position="idx">
+                                    {{item.title}}
+                                </ng-template>
+                            </app-typeahead>
                         </div>
                     </div>
                 </div>
