--- a/src/app/typeahead/typeahead.component.scss
+++ b/src/app/typeahead/typeahead.component.scss
@@ -72,3 +72,11 @@ input {
     //     background-color: #4ac694;
     // }
 }
+
+.spinner-border {
+    position: absolute;
+    right: 10px;
+    margin: auto;
+    cursor: pointer;
+    top: 30%;
+}
