--- a/src/app/typeahead/typeahead.component.html
+++ b/src/app/typeahead/typeahead.component.html
@@ -9,7 +9,8 @@
             <i class="fa fa-times" (click)="toggleSelection(option)" tabindex="0" aria-label="close"></i>
           </app-tag-badge>
 
-          <input #input [id]="settings.id" type="text" autocomplete="off" (focus)="onInputFocus($event)" (blur)="hasFocus = false" formControlName="typeahead">
+          <!--  (focus)="onInputFocus($event)"-->
+          <input #input [id]="settings.id" type="text" autocomplete="off" formControlName="typeahead">
           <div class="spinner-border spinner-border-sm" role="status" *ngIf="isLoadingOptions">
             <span class="sr-only">Loading...</span>
           </div>
@@ -21,9 +22,8 @@
             Type to search
           </li> -->
           <ng-container *ngIf="filteredOptions | async as options">
-            <li (click)="addNewItem(typeaheadControl.value)" 
-              *ngIf="showAddItem" 
-              class="list-group-item add-item" tabindex="0" role="option" (mouseenter)="focusedIndex = 0; updateHighlight();">
+            <li *ngIf="showAddItem" 
+              class="list-group-item add-item" role="option" (mouseenter)="focusedIndex = 0; updateHighlight();" (click)="addNewItem(typeaheadControl.value)" >
               Add {{typeaheadControl.value}}...
             </li>
             <li *ngFor="let option of options; let index = index;" (click)="toggleSelection(option)"  
