--- a/src/app/_modals/edit-series-modal/edit-series-modal.component.html
+++ b/src/app/_modals/edit-series-modal/edit-series-modal.component.html
@@ -59,7 +59,11 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="collections">Collections</label>
-                                <app-typeahead (selectedData)="updateCollections($event)" (newItemAdded)="addNewCollectionTag($event)" [settings]="settings"></app-typeahead>
+                                <app-typeahead (selectedData)="updateCollections($event)" (newItemAdded)="addNewCollectionTag($event)" [settings]="settings">
+                                    <ng-template #optionItem let-item let-position="idx">
+                                        {{item.title}}
+                                    </ng-template>
+                                </app-typeahead>
                             </div>
                         </div>
                     </div>
