--- a/src/app/typeahead/typeahead.component.scss
+++ b/src/app/typeahead/typeahead.component.scss
@@ -1,10 +1,10 @@
 
 input {
-    width: 4px;
+    //width: 4px;
     opacity: 1px;
     position: relative;
     left: 0px;
-    border: 1px solid red;
+    border: none;
 }
 
 .typeahead-input {
