--- a/src/app/typeahead/typeahead.component.html
+++ b/src/app/typeahead/typeahead.component.html
@@ -9,7 +9,7 @@
             <i class="fa fa-times" (click)="toggleSelection(option)" tabindex="0" aria-label="close"></i>
           </app-tag-badge>
 
-          <input #input [id]="settings.id" type="text" autocomplete="off" formControlName="typeahead">
+          <input #input [id]="settings.id" type="text" autocomplete="off" formControlName="typeahead" style="">
           <div class="spinner-border spinner-border-sm" role="status" *ngIf="isLoadingOptions">
             <span class="sr-only">Loading...</span>
           </div>
