Implemented a keycode trigger to perform clicks for accessibility. Hooked the tagbadges to the collection page.

--- a/src/app/all-collections/all-collections.component.html
+++ b/src/app/all-collections/all-collections.component.html
@@ -5,7 +5,7 @@
     (pageChange)="onPageChange($event)"
     >
         <ng-template #cardItem let-item let-position="idx">
-            <app-card-item [title]="item.title" [entity]="item" [imageUrl]="item.coverImage" (clicked)="loadCollection(item)"></app-card-item>
+            <app-card-item [title]="item.title" [entity]="item" [actions]="collectionTagActions" [imageUrl]="item.coverImage" (clicked)="loadCollection(item)"></app-card-item>
         </ng-template>
     </app-card-detail-layout>
 </ng-container>
