Title change for collection detail header

--- a/src/app/all-collections/all-collections.component.html
+++ b/src/app/all-collections/all-collections.component.html
@@ -10,7 +10,7 @@
     </app-card-detail-layout>
 </ng-container>
 <ng-template #collectionTagDetail>
-    <app-card-detail-layout header="Collections for {{collectionTagName}}" 
+    <app-card-detail-layout header="{{collectionTagName}} Collection" 
     [isLoading]="isLoading"
     [items]="series"
     [pagination]="seriesPagination"
