--- a/src/app/shared/card-item/card-item.component.html
+++ b/src/app/shared/card-item/card-item.component.html
@@ -13,12 +13,12 @@
     </div>
     <div class="card-body" *ngIf="title.length > 0 || actions.length > 0">
       <div>
-        <!-- TODO: Use TemplateRef so we can use custom html for title? -->
         <span class="card-title" placement="top" ngbTooltip="{{title}}" (click)="handleClick()" tabindex="0">
           <span *ngIf="isPromoted()">
-            <i class="fa fa-angle-double-up" aria-label="promoted"></i>
+            <i class="fa fa-angle-double-up" aria-hidden="true"></i>
           </span>
           {{title}}
+          <span class="sr-only">(promoted)</span>
         </span>
         <span class="card-actions float-right">
           <app-card-actionables (actionHandler)="performAction($event)" [actions]="actions" [labelBy]="title"></app-card-actionables>
