--- a/src/app/typeahead/typeahead.component.html
+++ b/src/app/typeahead/typeahead.component.html
@@ -17,23 +17,18 @@
       </div>
       <div class="dropdown" *ngIf="hasFocus">
         <ul class="list-group results" #results>
-          <ng-container *ngIf="filteredOptions | async as options">
-            <!-- <li *ngIf="hasFocus && !typeaheadControl.value && (filteredOptions | async)?.length === 0" class="list-group-item">
-            Type to search
-          </li> -->
-            <li *ngIf="showAddItem" 
-              class="list-group-item add-item" role="option" (mouseenter)="focusedIndex = 0; updateHighlight();" (click)="addNewItem(typeaheadControl.value)" >
+          <li *ngIf="showAddItem" 
+              class="list-group-item add-item index-0" role="option" (mouseenter)="focusedIndex = 0; updateHighlight();" (click)="addNewItem(typeaheadControl.value)">
               Add {{typeaheadControl.value}}...
-            </li>
-            <li *ngFor="let option of options; let index = index;" (click)="handleOptionClick(option)"  
-                class="list-group-item" role="option"
-                (mouseenter)="focusedIndex = index + (showAddItem ? 1 : 0); updateHighlight();">
-              <ng-container [ngTemplateOutlet]="optionTemplate" [ngTemplateOutletContext]="{ $implicit: option, idx: index }"></ng-container>
-            </li>
-            <li *ngIf="options.length === 0 && !showAddItem" class="list-group-item no-hover" role="status">
-              No data{{this.settings.addIfNonExisting ? ', type to add a custom item.' : '.'}}
-            </li>
-          </ng-container>
+          </li>
+          <li *ngFor="let option of filteredOptions | async; let index = index;" (click)="handleOptionClick(option)"  
+              class="list-group-item index-{{index +  + (showAddItem ? 1 : 0)}}" role="option"
+              (mouseenter)="focusedIndex = index + (showAddItem ? 1 : 0); updateHighlight();">
+            <ng-container [ngTemplateOutlet]="optionTemplate" [ngTemplateOutletContext]="{ $implicit: option, idx: index }"></ng-container>
+          </li>
+          <li *ngIf="(filteredOptions | async)?.length === 0 && !showAddItem" class="list-group-item no-hover" role="status">
+            No data{{this.settings.addIfNonExisting ? ', type to add a custom item.' : '.'}}
+          </li>
         </ul>
       </div>
 
