Update to CSS for homepage section title links

--- a/src/app/carousel/carousel-reel/carousel-reel.component.scss
+++ b/src/app/carousel/carousel-reel/carousel-reel.component.scss
@@ -12,8 +12,11 @@
     font-size: 1.2rem;
     font-weight: 400;
     margin-left: 10px;
-    text-decoration: none;
     color: black;
+
+    :hover {
+        text-decoration: underline;
+    }
 }
 
 ::ng-deep .bg-light {
