Fixed #202 - Scope list item hover styles in darkmode to only typeahead

--- a/src/app/typeahead/typeahead.component.scss
+++ b/src/app/typeahead/typeahead.component.scss
@@ -42,7 +42,8 @@ input {
     background-color: $dark-bg-color;
 }
 
-::ng-deep .bg-dark .list-group-item.active {
+// Causes bleedover
+::ng-deep .bg-dark .dropdown .list-group-item.active {
     background-color: $dark-hover-color;
 }
 
