--- a/src/assets/themes/dark.scss
+++ b/src/assets/themes/dark.scss
@@ -64,7 +64,7 @@ $dark-form-readonly: #434648;
     border-color: $dark-form-border;
   }
 
-  .list-group-item:hover {
+  .dropdown .list-group-item:hover {
     background-color: $dark-hover-color;
   }
 
