Adding :active and :focus selectors
- :active for accessibility best practice and UX.
- :focus for mobile.

--- a/src/app/carousel/carousel-reel/carousel-reel.component.scss
+++ b/src/app/carousel/carousel-reel/carousel-reel.component.scss
@@ -17,6 +17,14 @@
     :hover {
         text-decoration: underline;
     }
+
+    :active {
+        text-decoration: underline;
+    }
+
+    :focus {
+        text-decoration: underline;
+    }
 }
 
 ::ng-deep .bg-light {
