--- a/src/app/admin/_modals/directory-picker/directory-picker.component.html
+++ b/src/app/admin/_modals/directory-picker/directory-picker.component.html
@@ -6,6 +6,15 @@
     </button>
 </div>
 <div class="modal-body">
+    <div class="form-group">
+        <label for="filter">Filter</label>
+        <div class="input-group">
+            <input id="filter" autocomplete="false" class="form-control" [(ngModel)]="filterQuery" type="text" aria-describedby="reset-input">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="reset-input" (click)="filterQuery = '';">Clear</button>
+            </div>
+        </div>
+    </div>
     <nav aria-label="directory breadcrumb">
         <ol class="breadcrumb" *ngIf="routeStack.peek() !== undefined; else noBreadcrumb">
           <li class="breadcrumb-item {{route === routeStack.peek() ? 'active' : ''}}" *ngFor="let route of routeStack.items; let index = index">
@@ -21,9 +30,9 @@
             <div class="breadcrumb">Select a folder to view breadcrumb</div>
         </ng-template>
     </nav>
-    <ul class="list-group">
+    <ul class="list-group scrollable">
         <button *ngIf="routeStack.peek() !== undefined" (click)="goBack()" class="list-group-item list-group-item-action"><i class="fa fa-arrow-left mr-2" aria-hidden="true"></i>Back</button>
-        <button *ngFor="let folder of folders" class="list-group-item list-group-item-action" (click)="selectNode(folder)">
+        <button *ngFor="let folder of folders | filter: filterFolder" class="list-group-item list-group-item-action" (click)="selectNode(folder)">
             <span>{{getStem(folder)}}</span>
             <button type="button" class="btn btn-primary float-right" (click)="shareFolder(folder, $event)">Share</button>
         </button>
