--- a/src/app/admin/_modals/directory-picker/directory-picker.component.scss
+++ b/src/app/admin/_modals/directory-picker/directory-picker.component.scss
@@ -4,3 +4,8 @@ $breadcrumb-divider: quote(">");
 .breadcrumb-item + .breadcrumb-item::before {
     content: $breadcrumb-divider;
 }
+
+.scrollable {
+    overflow-y: auto;
+    max-height: 400px;
+}
