Allow user to change port

--- a/src/app/admin/manage-settings/manage-settings.component.html
+++ b/src/app/admin/manage-settings/manage-settings.component.html
@@ -9,9 +9,9 @@
 
         <div class="form-group">
             <label for="settings-port">Port</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="portTooltip" role="button" tabindex="0"></i>
-            <ng-template #portTooltip>Port the server listens on. Requires restart to take effect.</ng-template>
-            <span class="sr-only" id="settings-port-help">Port the server listens on. Requires restart to take effect.</span>
-            <input readonly id="settings-port" aria-describedby="settings-port-help" class="form-control" formControlName="port" type="number">
+            <ng-template #portTooltip>Port the server listens on. This is fixed if you are running on Docker. Requires restart to take effect.</ng-template>
+            <span class="sr-only" id="settings-port-help">Port the server listens on. This is fixed if you are running on Docker. Requires restart to take effect.</span>
+            <input id="settings-port" aria-describedby="settings-port-help" class="form-control" formControlName="port" type="number" step="1" min="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
         </div>
 
         <!-- <div class="form-group">
