After library creation, allow the user to still see the type of library. Ensure the manage components have same heading type. Added library and number of Shared folders to manage library items.

--- a/src/app/admin/_modals/directory-picker/directory-picker.component.scss
+++ b/src/app/admin/_modals/directory-picker/directory-picker.component.scss
@@ -9,3 +9,7 @@ $breadcrumb-divider: quote(">");
     overflow-y: auto;
     max-height: 400px;
 }
+
+.btn-outline-secondary {
+    border: 1px solid #ced4da;
+}
