--- a/src/app/admin/manage-library/manage-library.component.html
+++ b/src/app/admin/manage-library/manage-library.component.html
@@ -15,6 +15,8 @@
                     </div>
                 </h4>
             </div>
+            <div>Type: {{libraryType(library.type)}}</div>
+            <div>Shared Folders: {{library.folders.length + ' folders'}}</div>
         </li>
         <li *ngIf="loading" class="list-group-item">
             <div class="spinner-border text-secondary" role="status">
