--- a/src/app/shared/drawer/drawer.component.html
+++ b/src/app/shared/drawer/drawer.component.html
@@ -4,6 +4,7 @@
   [class.is-open]="isOpen"
   [class.position-right]="position === 'right'"
   [class.position-left]="position === 'left'"
+  [class.position-bottom]="position === 'bottom'"
 >
   <div class="header">
     <ng-content select="[header]"></ng-content>
