--- a/src/app/admin/manage-users/manage-users.component.html
+++ b/src/app/admin/manage-users/manage-users.component.html
@@ -18,6 +18,12 @@
                 </h4>
                 <div>Last Active: {{member.lastActive | date: 'MM/dd/yyyy'}}</div>
                 <div *ngIf="!member.isAdmin">Sharing: {{formatLibraries(member)}}</div>
+                <div>
+                    Roles: <span *ngIf="member.roles.length === 1 && member.roles[0] == 'Pleb'; else showRoles">None</span>
+                    <ng-template #showRoles>
+                        <app-tag-badge *ngFor="let role of member.roles">{{role}}</app-tag-badge>
+                    </ng-template>
+                </div>
             </div>
         </li>
         <li *ngIf="loadingMembers" class="list-group-item">
