--- a/src/app/admin/manage-users/manage-users.component.html
+++ b/src/app/admin/manage-users/manage-users.component.html
@@ -23,6 +23,10 @@
                     <ng-template #showRoles>
                         <app-tag-badge *ngFor="let role of member.roles">{{role}}</app-tag-badge>
                     </ng-template>
+                    <button class="btn btn-icon" title="{{hasAdminRole(member) ? 'Admins have all feature permissions' : 'Edit Role'}}" (click)="openEditRole(member)" [disabled]="hasAdminRole(member)">
+                        <i class="fa fa-pen" aria-hidden="true"></i>
+                        <span class="sr-only">Edit Role</span>
+                    </button>
                 </div>
             </div>
         </li>
