--- a/src/app/manga-reader/manga-reader.component.scss
+++ b/src/app/manga-reader/manga-reader.component.scss
@@ -1,3 +1,5 @@
+@import '../../theme/colors';
+
 $center-width: 50%;
 $side-width: 25%;
 
@@ -40,73 +42,30 @@ canvas {
     z-index: 1;
 }
 
+.title, .subtitle {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.filter-dark {
+    filter: brightness(0.85);
+}
+
+.filter-sepia {
+    //filter: sepia(90%) brightness(0.85);
+    filter: sepia(80%) hue-rotate(349deg) saturate(200%);
+}
+
+.bottom-menu {
+    //padding-bottom: 20px;
+    padding: 20px 20px;
+}
+
 
 .overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 1;
-  cursor: pointer;
+  background-color: royalblue; // rgba(0,0,0,0.5);
   color: white;
-
-  .right {
-    border-left: $dash-width dashed $secondary-color;
-    cursor: pointer;
-
-    p {
-        font-size: 24px;
-        position: absolute;
-        height: 100%;
-        z-index: 1;
-        top: 65%;
-        right: $pointer-offset;
-        color: $secondary-color;
-    }
-
-    i {
-        font-size: 70px;
-        position: absolute;
-        height: 100%;
-        z-index: 1;
-        top: 50%;
-        right: $pointer-offset;
-        color: $secondary-color;
-      }
-  }
-  .left {
-    border-right: $dash-width dashed $secondary-color;
-    cursor: pointer;
-
-    p {
-        font-size: 24px;
-        position: absolute;
-        height: 100%;
-        z-index: 1;
-        top: 65%;
-        left: $pointer-offset;
-        color: $secondary-color;
-    }
-
-    i {
-        font-size: 70px;
-        position: absolute;
-        height: 100%;
-        z-index: 1;
-        top: 50%;
-        left: $pointer-offset;
-        color: $secondary-color;
-      }
-
-  }
-
-
-
-  
 }
 
 // Fitting Options
@@ -180,11 +139,16 @@ canvas {
     overflow: hidden;
     border: 2px solid #ccc;
 
+    &::before {
+        margin-left: 30%;
+    }
+
     /* Control the left side */
     .left-side {
         height: 20px;
         width: 20px;
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.6);
+        margin-top: -16px;
     }
     
     /* Control the right side */
@@ -192,12 +156,57 @@ canvas {
         height: 20px;
         margin-left: 20px;
         width: 20px;
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(255, 255, 255, 0.6);
+        margin-top: -16px;
     }
 
     .none {
-        background-color: rgba(255, 255, 255, 0.5);;
+        background-color: rgba(255, 255, 255, 0.5);
     }
   }
   
+  ::ng-deep {
+    .custom-slider .ngx-slider .ngx-slider-bar {
+      background: #e9ffe2;
+      height: 2px;
+    }
+    .custom-slider .ngx-slider .ngx-slider-selection {
+      background: $primary-color;
+    }
   
+    .custom-slider .ngx-slider .ngx-slider-pointer {
+      width: 8px;
+      height: 16px;
+      top: auto; /* to remove the default positioning */
+      bottom: 0;
+      background-color: #333;
+      border-top-left-radius: 3px;
+      border-top-right-radius: 3px;
+    }
+  
+    .custom-slider .ngx-slider .ngx-slider-pointer:after {
+      display: none;
+    }
+  
+    .custom-slider .ngx-slider .ngx-slider-bubble {
+      bottom: 14px;
+    }
+  
+    .custom-slider .ngx-slider .ngx-slider-limit {
+      font-weight: bold;
+      color: $primary-color;
+    }
+  
+    .custom-slider .ngx-slider .ngx-slider-tick {
+      width: 1px;
+      height: 10px;
+      margin-left: 4px;
+      border-radius: 0;
+      background: #ffe4d1;
+      top: -1px;
+    }
+  
+    .custom-slider .ngx-slider .ngx-slider-tick.ngx-slider-selected {
+      background: $primary-color;
+    }
+  }
