Some bugfixes around the reader based on use testing

--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -12,6 +12,8 @@
                     {{subtitle}}
                 </div>
             </div>
+
+            <!-- TODO: If webtoon mode, show a scroll to top here -->
         </div>
     </div>
     <ng-container *ngIf="isLoading">
@@ -43,7 +45,7 @@
             
             
         </div>
-        <div class="row ml-2 mr-2">
+        <div class="row pt-2 ml-2 mr-2">
             <div class="col">
                 <button class="btn btn-icon" title="Reading Mode">
                     <i class="fa fa-exchange-alt" aria-hidden="true"></i>
