--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -6,7 +6,7 @@
                 <span class="sr-only">Back</span>
             </button>
             
-            <div *ngIf="chapterInfo">
+            <div>
                 <div style="font-weight: bold;">{{title}}</div>
                 <div class="subtitle">
                     {{subtitle}}
