Login refresh & toaster styles
- Added new font for login
- Updated login styles
- Hide nav bar on logout
- show nav bar on login
- Added images for new login
- dark styles for login
- dark styles for toastr

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,6 +1,10 @@
 <div class="mx-auto">
     <div class="card p-3" style="width: 18rem;">
-        <h3 class="card-title text-center">Login</h3>
+        <div class="logo-container">
+            <img class="logo" src="assets/images/kavita-book-cropped.png"/>        
+            <h3 class="card-title text-center">Kavita</h3>
+        </div>
+
         <div class="card-text">
             <form [formGroup]="loginForm" (ngSubmit)="login()">
                 <div class="form-group">
@@ -14,7 +18,7 @@
                 </div>
                 
                 <div class="float-right">
-                    <button class="btn btn-primary" type="submit">Login</button>
+                    <button class="btn btn-primary alt" type="submit">Login</button>
                 </div>
                 
             </form>
