--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,16 @@ label, select, .clickable {
   src: url(assets/fonts/EBGarmond/EBGaramond-VariableFont_wght.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "Spartan";
+  src: url("assets/fonts/Spartan/Spartan-Regular.ttf");
+}
+@font-face {
+  font-family: "Spartan";
+  src: url("assets/fonts/Spartan/Spartan-Bold.ttf");
+  font-weight: bold;
+}
+
 html, body { height: 100%; }
 body {
   margin: 0; 
