--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,7 +1,7 @@
 <div class="mx-auto">
     <div class="card p-3" style="width: 18rem;">
         <div class="logo-container">
-            <img class="logo" src="assets/images/kavita-book-cropped.png"/>        
+            <img class="logo" src="assets/images/kavita-book-cropped.png" alt="Kavita logo"/>        
             <h3 class="card-title text-center">Kavita</h3>
         </div>
 
